# globalprotect-linux

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.debian  Dockerfile.fedora  PKGBUILD  README.md  VERSION  build-deb.sh  build-rpm.sh  build.md
GPClient/: CMakeLists.txt  authenticationmanager.cpp  authenticationmanager.h  cdpcommandmanager.cpp  com.qt.gpclient.desktop.in  com.qt.gpclient.metainfo.xml.in  connectionmanager.cpp  connectionmanager.h  enhancedwebview.cpp  enhancedwebview.h  gatewayauthenticator.cpp  gpclient.cpp  gpclient.h  gpclient.ui  gpgateway.h  gphelper.cpp  logging.h  main.cpp  portalauthenticator.cpp  portalconfigresponse.cpp  preloginresponse.cpp  resources.qrc  samlloginwindow.cpp  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h  signalhandler.h  singleinstance.h  systemtraymanager.cpp  systemtraymanager.h  vpn_dbus.h
GPService/: CMakeLists.txt  gp.conf  gpservice.cpp  gpservice.h  main.cpp
GPService/dbus/: com.qt.GPService.conf.in  com.qt.GPService.service.in
GPService/systemd/: gpservice.service.in
